<resources>
    <string name="app_name">SyuApplication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">second fragment</string>
    <string name="defaultData">no Data</string>
    <string name="allotpoint">allotpoint</string>
    <string name="point">point</string>
    <string name="average">average</string>
    <string name="field">field</string>
    <string name="coincheck">coincheck</string>
    <string name="bitFlyer">bitFlyer</string>
    <string name="Zaif">Zaif</string>
    <string name="BtcBox">BtcBox</string>
    <string name="Quoinex">Quoinex</string>
    <string name="bitbank">bitbank</string>

</resources>
